--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
 </properties>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>3.3.2</version>
+</plugin>
   <modelVersion>4.0.0</modelVersion>
   <groupId>in.ashokit</groupId>
   <artifactId>01-maven-web-app</artifactId>
