--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,12 @@
   </dependencies>
   <build>
     <finalName>01-maven-web-app</finalName>
-     <plugins>
+    <plugins>
+     <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-war-plugin</artifactId>
     <version>3.3.2</version>
+       </plugin>
 </plugins>
     
   </build>
